# proj-with-data

./: .pre-commit-config.yaml  pyproject.toml
src/proj_with_data/: __init__.py  my_data.json  my_data.md
