[tool.poetry]
name = "proj-with-data"
version = "0.1.0"
description = ""
authors = ["Eric L Frederich <eric.frederich@siemens.com>"]
readme = "README.md"
packages = [{include = "proj_with_data", from = "src"}]

[tool.poetry.dependencies]
python = "^3.11"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
